[Auth-Service] Refactor Auth Flow – Token-Based Login, Logout & Refresh Mechanism (#44)
* Refactor Auth Flow – Token-Based Login, Logout & Refresh Mechanism

* Frontend environment files

* Fix copilot comments
